# hubmap_chatbot

./: .gitignore  Dockerfile  README.md  app.py  es_field_samples_dataset.json  output.txt  pyproject.toml
hubmapbot/: __init__.py  constants.py  data_loader_es_field.py  prompts.py  simple_chatbot.py  test_engines.py  utils.py
notebooks/: data_loader_github.ipynb  es_field_ds.ipynb  es_field_explore.ipynb  es_field_samples_query.ipynb  function_calling.ipynb  hubmap_sdk.ipynb
persist/chroma/: chroma-collections.parquet  chroma-embeddings.parquet
persist/chroma/index/: id_to_uuid_6b45dbd0-36fc-42be-ab39-8ff73bc2448e.pkl  id_to_uuid_9dc550ac-cf00-4487-8ad0-26257f34d6fb.pkl  id_to_uuid_c9c5784c-9a69-4066-8840-e932154844c0.pkl  index_metadata_6b45dbd0-36fc-42be-ab39-8ff73bc2448e.pkl  index_metadata_9dc550ac-cf00-4487-8ad0-26257f34d6fb.pkl  index_metadata_c9c5784c-9a69-4066-8840-e932154844c0.pkl  uuid_to_id_6b45dbd0-36fc-42be-ab39-8ff73bc2448e.pkl  uuid_to_id_9dc550ac-cf00-4487-8ad0-26257f34d6fb.pkl  uuid_to_id_c9c5784c-9a69-4066-8840-e932154844c0.pkl
persist/chroma_es_dataset/: chroma-collections.parquet  chroma-embeddings.parquet
persist/chroma_es_dataset/index/: id_to_uuid_ec78efc9-633c-4a46-8346-cbfa359f92df.pkl  index_metadata_ec78efc9-633c-4a46-8346-cbfa359f92df.pkl  uuid_to_id_ec78efc9-633c-4a46-8346-cbfa359f92df.pkl
